# webapi/controller/learning_content.go
@@ -58,12 +58,12 @@ func (l LearningController) LearningResult(ctx *wrapper.Context) {
 // @Tags learning
 // @Accept x-www-form-urlencoded
 // @Produce json
-// @Param auth body form_req.LearningReq true "request data"
+// @Param auth query form_req.LearningReq true "request data"
 // @Success 200 {object} form_resp.StatusResp "response data"
-// @Router /v1/learning_content/learning/ [post]
+// @Router /v1/learning_content/learning/ [get]
 // @Security ApiKeyAuth
 func (l LearningController) Learning(ctx *wrapper.Context) {
-	wrapper.ApiWrapper(ctx, service.LearningHandler, true, &form_req.LearningReq{}, &wrapper.ApiConfig{ReqType: support.CHECKTYPE_JSON})
+	wrapper.ApiWrapper(ctx, service.LearningHandler, true, &form_req.LearningReq{}, &wrapper.ApiConfig{ReqType: support.CHECKTYPE_FORM})
 }
 
 func (l LearningController) StartChat(ctx *wrapper.Context) {
